# NNPlayground

./: .gitignore  README.md  XOR.py  example.py  init.vim  plot_errors.R
chainer/: XOR.DOT  XOR.py  cpu.csv  gpu.csv
dynet/: XOR.py  cpu.csv  gpu.csv
dynet_cpp/: CMakeLists.txt  XOR.cc  train_xor-batch.cc
dynet_rust/: xor.rs
pytorch/: XOR.py  cpu.csv  gpu.csv
